fixed: link or media dragged from Page and Media bars were covered by bars and UI windows

--- a/dmCorePlugin/web/css/mediaBar.css
+++ b/dmCorePlugin/web/css/mediaBar.css
@@ -23,7 +23,7 @@ body.mediaBarOpen #sf_admin_content {
   box-shadow: -3px 0 4px #888;
   -moz-box-shadow: -3px 0 4px #888;
   -webkit-box-shadow: -3px 0 4px #888;
-  z-index: 16777271; /* max z-index for safari 3 */
+  z-index: 16777270;
 }
 
 #dm_media_bar_toggler {
@@ -41,7 +41,7 @@ body.mediaBarOpen #sf_admin_content {
   box-shadow: -2px 0 5px #888;
   -moz-box-shadow: -2px 0 5px #888;
   -webkit-box-shadow: -2px 0 5px #888;
-  z-index: 16777271; /* max z-index for safari 3 */
+  z-index: 16777270;
 }
 
 #dm_media_bar.open {
@@ -130,5 +130,5 @@ body.mediaBarOpen #sf_admin_content {
   opacity: 0.4;
   font-size: 11px;
   text-align: center;
-  z-index: 500;
+  z-index: 16777271; /* max z-index for safari 3 */
 }
