--- a/dmCorePlugin/web/css/toolBar.css
+++ b/dmCorePlugin/web/css/toolBar.css
@@ -9,7 +9,7 @@
   color:#222;
   font-size: 12px;
 
-  z-index: 16777271; /* max z-index for safari 3 */
+  z-index: 16777270;
 }
 
 #dm_tool_bar.blue {
